# MusicAppServer

./: .gitignore  Cargo.toml
src/: main.rs
src/api/: handlers.rs
src/models/: errors.rs  genres.rs  mod.rs  song.rs  spotify.rs  user.rs
src/services/: db.rs  lastfm.rs  mod.rs  spotify.rs
src/token/: token.rs
