[package]
name = "music_app_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
chrono = { version ="0.4.26", features = ["serde"] }
dotenv = "0.15.0"
poem = "1.2"
poem-openapi = { version = "3.0.3", features = ["openapi-explorer", "chrono"] }
reqwest = "0.11.20"
rspotify = { version = "0.11.7", features = ["cli"] }
serde = "1.0.186"
serde_json = "1.0.105"
sqlx = { version = "0.7.1", features = ["postgres", "runtime-tokio", "tls-native-tls", "chrono"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
